proyecto_final/proyecto-integrador-docker-k8s-main/k8s/07-ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: proyecto-integrador
  labels:
    app: proyecto-integrador
    version: v2.0
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Path para API (debe estar ANTES que / para tener prioridad)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080

      - path: /actuator
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080

      # Path para frontend (raíz) - al final como catch-all
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
